# OOP.-2-uzduotis

./: CMakeLists.txt  Data.h  Person.cpp  Person.h  README.md  Student.cpp  Student.h  check.cpp  check.h  comparator.cpp  comparator.h  createFiles.cpp  createFiles.h  distribution.cpp  distribution.h  final.cpp  final.h  kursiokai.txt  main.cpp  output.cpp  output.h  reading.cpp  reading.h  v0.1arrays.cpp  workWithFiles.cpp  workWithFiles.h  workWithScreen.cpp  workWithScreen.h
Dokumentacija/: CMakeLists_8txt.html  Person_8cpp.html  Person_8cpp__incl.map  Person_8cpp__incl.md5  Person_8h.html  Person_8h__dep__incl.map  Person_8h__dep__incl.md5  Person_8h__incl.map  Person_8h__incl.md5  Person_8h_source.html  README_8md.html  Student_8cpp.html  Student_8cpp__incl.map  Student_8cpp__incl.md5  Student_8h.html  Student_8h__dep__incl.map  Student_8h__dep__incl.md5  Student_8h__incl.map  Student_8h__incl.md5  Student_8h_source.html  annotated.html  check_8cpp.html  check_8cpp__incl.map  check_8cpp__incl.md5  check_8h.html  check_8h__dep__incl.map  check_8h__dep__incl.md5  check_8h__incl.map  check_8h__incl.md5  check_8h_source.html  classPerson-members.html  classPerson.html  classPerson__coll__graph.map  classPerson__coll__graph.md5  classPerson__inherit__graph.map  classPerson__inherit__graph.md5  classStudent-members.html  classStudent.html  classStudent__coll__graph.map  classStudent__coll__graph.md5  (+50 more)
Dokumentacija/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  (+23 more)
