cmake_minimum_required(VERSION 3.17)
project(OOP__1_uzduotis_1_0)

set(CMAKE_CXX_STANDARD 14)

add_executable(OOP__1_uzduotis_1_0
        check.cpp
        check.h
        comparator.cpp
        comparator.h
        createFiles.cpp
        createFiles.h
        Data.h
        distribution.cpp
        distribution.h
        final.cpp
        final.h
        main.cpp
        output.cpp
        output.h
        reading.cpp
        reading.h)
