cmake_minimum_required(VERSION 3.17)
project(OOP__2_uzduotis_1_5)

set(CMAKE_CXX_STANDARD 14)

add_executable(OOP__2_uzduotis_1_1
        check.cpp
        check.h
        distribution.cpp
        distribution.h
        main.cpp
        Student.cpp
        Student.h
        workWithFiles.cpp
        workWithFiles.h
        workWithScreen.cpp
        workWithScreen.h 
        Person.cpp 
        Person.h)

